fix footer spacings

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -2,7 +2,6 @@ $footerColor: transparent;
 
 footer {
   padding-bottom: 50px;
-  padding-top: 100px;
   background-color: $footerColor;
   color: var(--color-black);
 
